src/objects/jj_rb_Rebate_Accrual_Report_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>jj_rb_Calculated_VAT__c</fullName>
        <formula>jj_rb_Rebate_Product__r.jj_rb_VAT_Code__r.jj_rb_VAT__c *  jj_rb_Net_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Net_Rebate_Including_VAT__c</fullName>
        <formula>jj_rb_Net_Rebate__c +  jj_rb_Calculated_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Rebate Including VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Net_Rebate__c</fullName>
        <label>Net Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Accrual_Report__c</fullName>
        <label>Rebate Accrual Report</label>
        <referenceTo>jj_rb_Rebate_Accrual_Report__c</referenceTo>
        <relationshipLabel>Rebate Accrual Report Line Items</relationshipLabel>
        <relationshipName>Rebate_Accrual_Report_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rebate Product</label>
        <referenceTo>jj_rb_Rebate_Product__c</referenceTo>
        <relationshipLabel>Rebate Accrual Report Line Items</relationshipLabel>
        <relationshipName>Rebate_Accrual_Report_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_per_unit__c</fullName>
        <formula>jj_rb_Net_Rebate__c / jj_rb_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate per unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Material_No__c</fullName>
        <formula>jj_rb_Rebate_Product__r.jj_rb_SAP_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Material No</label>
        <type>Text</type>
    </fields>
    <label>Rebate Accrual Report Line Item</label>
    <nameField>
        <displayFormat>RLI-{0}</displayFormat>
        <label>Report Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Accrual Report Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>